# rustc-build-sysroot-emscripten

./: Cargo.toml
src/: main.rs
