[package]
name = "rustc-build-sysroot-emscripten"
version = "0.1.0"
edition = "2021"
description = "Build rust sysroots for Emscripten"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.24", features = ["derive"] }
rustc-build-sysroot = "0.5.4"
